--- a/utilizandoSession.html
+++ b/utilizandoSession.html
@@ -1,5 +1,10 @@
 <html>
     <head> 
+        <style>
+            #divCenter { 
+                margin-top: 10%;
+            }
+        </style>
         <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -7,8 +12,8 @@
     </head>
     <body>
         <div id="divCenter">
-                <div class="form-container col-md-6 offset-md-3">
-                        <h1>Register</h1>
+                <div class="form-container col-md-3 offset-md-4">
+                        <h3>Register</h3>
                         <div class="form-group">
                             <label for="username">Username</label>
                             <input type="text" id="username" class="form-control"/>
@@ -18,8 +23,8 @@
                             <button class="btn btn-primary" id="btnSave">Save</button>
                       </div>
                 </div>
-                <div class="form-container col-md-6 offset-md-3">
-                        <h1>Login</h1>
+                <div class="form-container col-md-3 offset-md-4">
+                        <h3>Login</h3>
                         <div class="form-group">
                             <label for="login">Username</label>
                             <input type="text" id="login" class="form-control"/>
@@ -29,8 +34,8 @@
                             <button class="btn btn-primary" id="btnLogin">Logar</button>
                       </div>
                 </div>
-                <div class="form-container col-md-6 offset-md-3">
-                        <h1>Verifica id na session</h1>
+                <div class="form-container col-md-3 offset-md-4">
+                        <h3>Verifica id na session</h3>
                         <div class="form-group">
                             <label for="idSession"></label>
                             <input type="text" id="idSession" class="form-control"/>
